# prelevement-marginal

./: LICENSE  Readme.md  api.py  async_test.py  clean_temps_plein.csv  marg_prel.ipynb  mon-entreprise-urssaf-fr-chain.pem  prel_marg.csv  pyproject.toml  raw_temps_plein.csv  request.json
marginal_prel/: utils.py
