[tool.poetry]
name = "marginal-prel"
version = "0.1.0"
description = ""
authors = ["Solal Attias <solalattias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ipykernel = "^6.28.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
seaborn = "^0.13.2"
grequests = "^0.7.0"
joblib = "^1.3.2"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
